@@ -1,7 +1,14 @@
+ARG OPENJDK_VERSION=11.0.11
+
 ## Building stage
-#FROM openjdk:11-jdk AS builder # use OpenJDK 11 if desired
-FROM openjdk:8-jdk-alpine3.9 AS builder
+FROM azul/zulu-openjdk-alpine:$OPENJDK_VERSION AS builder
 WORKDIR /src/
+
+# add glibc for gRPC protoc
+ARG GLIBC_VERSION=2.33-r0
+RUN wget -O /etc/apk/keys/sgerrand.rsa.pub https://alpine-pkgs.sgerrand.com/sgerrand.rsa.pub && \
+  wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/$GLIBC_VERSION/glibc-$GLIBC_VERSION.apk && \
+  apk add glibc-$GLIBC_VERSION.apk
 
 # cache gradle
 COPY gradle /src/gradle
@@ -14,8 +21,7 @@ COPY . /src/
 RUN ./gradlew build
 
 ## Final image
-#FROM openjdk:11-jre # use OpenJDK 11 if desired
-FROM openjdk:8-jre-alpine3.9
+FROM azul/zulu-openjdk-alpine:${OPENJDK_VERSION}-jre AS runtime
 
 # add a group and an user with specified IDs
 RUN addgroup -S -g 1111 appgroup && adduser -S -G appgroup -u 1111 appuser 
@@ -24,6 +30,9 @@ RUN addgroup -S -g 1111 appgroup && adduser -S -G appgroup -u 1111 appuser
 # add curl for health check
 RUN apk add --no-cache curl
 #RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/* # if based on Debian/Ubuntu
+
+# add /data directory with correct rights
+RUN mkdir /data && chown 1111:1111 /data
 
 WORKDIR /app
 COPY --from=builder /src/build/libs/*-all.jar /app/microservice.jar
@@ -38,12 +47,12 @@ EXPOSE 8080
 # use a log appender with no timestamps as Docker logs the timestamp itself ("docker logs -t ID")
 ENV LOG_APPENDER classic-stdout
 
-HEALTHCHECK --interval=5m --timeout=5s --retries=3 --start-period=1m CMD curl --fail http://localhost/health || exit 1
+HEALTHCHECK --interval=5m --timeout=5s --retries=3 --start-period=1m CMD curl --fail http://localhost:8080/health || exit 1
 
 # "-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap" lets the JVM respect CPU and RAM limits inside a Docker container
 CMD ["java", \
      "-XX:+UnlockExperimentalVMOptions", \
-     "-XX:+UseCGroupMemoryLimitForHeap", \
+     "-XX:+UseContainerSupport", \
      "-noverify", \
      "-XX:TieredStopAtLevel=1", \
      "-Dcom.sun.management.jmxremote", \
